--- a/projects.html
+++ b/projects.html
@@ -100,9 +100,40 @@
     <section
       class="padding-x-large padding-y-medium flex projects cases show-on-scroll"
     >
+      <div class="cases-image">
+        <a href="projects/ccw.html">
+          <img src="assets/images/projects/ccw/combined.png" alt="" />
+        </a>
+      </div>
+      <div class="cases-info">
+        <h1>CCW - Central Car Wash</h1>
+        <h4 class="subtitle">Responsive website and webshop</h4>
+        <h6 class="text-dark">My roles:</h6>
+        <ul class="text-dark">
+          <li><p>Main HTML & CSS developer</p></li>
+          <li><p>Main JavaScript developer</p></li>
+        </ul>
+        <a href="projects/ccw.html"
+          ><h4 class="padding-y-extra-small gradient-underline-hover">
+            view project <i class="fas fa-long-arrow-alt-right"></i></h4
+        ></a>
+      </div>
+    </section>
+
+    <div class="divider hide-large hide-extra-large"></div>
+
+    <section
+      class="padding-x-large padding-y-medium flex projects cases show-on-scroll"
+    >
       <div class="cases-info">
         <h1>Diabetes.dk</h1>
         <h4 class="subtitle">Mobile single-page web app</h4>
+        <h6 class="text-dark">My roles:</h6>
+        <ul class="text-dark">
+          <li><p>Project manager</p></li>
+          <li><p>Designer</p></li>
+          <li><p>Main JavaScript developer</p></li>
+        </ul>
         <a href="projects/diabetes-dk.html"
           ><h4 class="padding-y-extra-small gradient-underline-hover">
             view project <i class="fas fa-long-arrow-alt-right"></i></h4
@@ -111,8 +142,7 @@
       <div class="cases-image">
         <a href="projects/diabetes-dk.html">
           <img
-            class="diabetes-img"
-            src="assets/images/projects/diabetes/diabetes-landing-m.png"
+            src="assets/images/projects/diabetes/diabetes-presentation-mockup.png"
             alt=""
           />
         </a>
@@ -127,7 +157,7 @@
       <div class="cases-image">
         <a href="projects/svalegaarden-mest.html">
           <img
-            src="assets/images/projects/svalegaarden/svalegaarden-12.png"
+            src="assets/images/projects/svalegaarden/svalegaarden-all-devices.png"
             alt=""
           />
         </a>
@@ -135,6 +165,12 @@
       <div class="cases-info">
         <h1>Svalegaarden Mest</h1>
         <h4 class="subtitle">Responsive website</h4>
+        <h6 class="text-dark">My roles:</h6>
+        <ul class="text-dark">
+          <li><p>Main designer</p></li>
+          <li><p>CSS animator</p></li>
+          <li><p>JavaScript developer</p></li>
+        </ul>
         <a href="projects/svalegaarden-mest.html"
           ><h4 class="padding-y-extra-small gradient-underline-hover">
             view project <i class="fas fa-long-arrow-alt-right"></i></h4
@@ -152,6 +188,11 @@
         <h4 class="subtitle">
           Responsive website with CMS
         </h4>
+        <h6 class="text-dark">My roles:</h6>
+        <ul class="text-dark">
+          <li><p>Main JavaScript programmer</p></li>
+          <li><p>Designer</p></li>
+        </ul>
         <a href="projects/ungdomsringens-musikfestival.html"
           ><h4 class="padding-y-extra-small gradient-underline-hover">
             view project <i class="fas fa-long-arrow-alt-right"></i></h4
@@ -161,7 +202,7 @@
         <a href="projects/ungdomsringens-musikfestival.html">
           <img
             class=""
-            src="assets/images/projects/ungdomsringens/ungdomsringens-12.png"
+            src="assets/images/projects/ungdomsringens/ungdomsringens-all-devices.png"
             alt=""
           />
         </a>
@@ -176,7 +217,7 @@
       <div class="cases-image">
         <a href="projects/it-just-forks.html">
           <img
-            src="assets/images/projects/it-just-forks/it-just-forks-12.png"
+            src="assets/images/projects/it-just-forks/it-just-forks-all-devices.png"
             alt=""
           />
         </a>
@@ -184,6 +225,11 @@
       <div class="cases-info">
         <h1>It just forks</h1>
         <h4 class="subtitle">React application</h4>
+        <h6 class="text-dark">My roles:</h6>
+        <ul class="text-dark">
+          <li><p>Designer</p></li>
+          <li><p>Developer</p></li>
+        </ul>
         <a href="projects/it-just-forks.html"
           ><h4 class="padding-y-extra-small gradient-underline-hover">
             view project <i class="fas fa-long-arrow-alt-right"></i></h4
@@ -195,7 +241,9 @@
       <div class="footer-wrapper show-on-scroll">
         <h3>&lt; Sounds interesting? /&gt;</h3>
         <h6 class="text-thin">Let's talk about what we can make together:</h6>
-        <h5>asia.jankowska00@gmail.com</h5>
+        <a href="mailto:asia.jankowska00@gmail.com"
+          ><h5>asia.jankowska00@gmail.com</h5>
+        </a>
         <div class="flex">
           <h2>
             <a href="https://github.com/asia-jankowska00/"
