--- a/projects/diabetes-dk.html
+++ b/projects/diabetes-dk.html
@@ -122,14 +122,14 @@
 
         <h4 class="subtitle">My roles:</h4>
         <ul class="text-dark">
-          <li><p>Project leader</p></li>
+          <li><p>Project manager</p></li>
           <li><p>Designer</p></li>
-          <li><p>Main JavaScript programmer</p></li>
+          <li><p>Main JavaScript developer</p></li>
         </ul>
       </div>
       <div class="cases-image">
         <img
-          src="../assets/images/projects/diabetes/diabetes-landing-m.png"
+          src="../assets/images/projects/diabetes/diabetes-presentation-mockup.png"
           alt=""
         />
       </div>
@@ -224,7 +224,9 @@
       <div class="footer-wrapper show-on-scroll">
         <h3>&lt; Sounds interesting? /&gt;</h3>
         <h6 class="text-thin">Let's talk about what we can make together:</h6>
-        <h5>asia.jankowska00@gmail.com</h5>
+        <a href="mailto:asia.jankowska00@gmail.com"
+          ><h5>asia.jankowska00@gmail.com</h5>
+        </a>
         <div class="flex">
           <h2>
             <a href="https://github.com/asia-jankowska00/"
