--- a/projects/it-just-forks.html
+++ b/projects/it-just-forks.html
@@ -121,12 +121,12 @@
         <h4 class="subtitle">My roles:</h4>
         <ul class="text-dark">
           <li><p>Designer</p></li>
-          <li><p>Programmer</p></li>
+          <li><p>Developer</p></li>
         </ul>
       </div>
       <div class="cases-image">
         <img
-          src="../assets/images/projects/it-just-forks/it-just-forks-12.png"
+          src="../assets/images/projects/it-just-forks/it-just-forks-all-devices.png"
           alt=""
         />
       </div>
@@ -191,7 +191,9 @@
       <div class="footer-wrapper show-on-scroll">
         <h3>&lt; Sounds interesting? /&gt;</h3>
         <h6 class="text-thin">Let's talk about what we can make together:</h6>
-        <h5>asia.jankowska00@gmail.com</h5>
+        <a href="mailto:asia.jankowska00@gmail.com"
+          ><h5>asia.jankowska00@gmail.com</h5>
+        </a>
         <div class="flex">
           <h2>
             <a href="https://github.com/asia-jankowska00/"
