--- a/projects/svalegaarden-mest.html
+++ b/projects/svalegaarden-mest.html
@@ -123,14 +123,14 @@
 
         <h4 class="subtitle">My roles:</h4>
         <ul class="text-dark">
-          <li><p>Designer</p></li>
-          <li><p>CSS Animator</p></li>
-          <li><p>JavaScript programmer</p></li>
+          <li><p>Main designer</p></li>
+          <li><p>CSS animator</p></li>
+          <li><p>JavaScript developer</p></li>
         </ul>
       </div>
       <div class="cases-image">
         <img
-          src="../assets/images/projects/svalegaarden/svalegaarden-12.png"
+          src="../assets/images/projects/svalegaarden/svalegaarden-all-devices.png"
           alt=""
         />
       </div>
@@ -207,7 +207,7 @@
     <section class="padding-x-large padding-y-medium flex cases show-on-scroll">
       <div class="cases-image">
         <img
-          src="../assets/images/projects/svalegaarden/booking-after.gif"
+          src="../assets/images/projects/svalegaarden/svalgegaarden-animation.gif"
           alt=""
         />
       </div>
@@ -226,7 +226,9 @@
       <div class="footer-wrapper show-on-scroll">
         <h3>&lt; Sounds interesting? /&gt;</h3>
         <h6 class="text-thin">Let's talk about what we can make together:</h6>
-        <h5>asia.jankowska00@gmail.com</h5>
+        <a href="mailto:asia.jankowska00@gmail.com"
+          ><h5>asia.jankowska00@gmail.com</h5>
+        </a>
         <div class="flex">
           <h2>
             <a href="https://github.com/asia-jankowska00/"
