--- a/index.html
+++ b/index.html
@@ -47,8 +47,7 @@
     ></script>
   </head>
   <body>
-    <header class="header-homepage">
-      <!-- <div class="gradient-bg"></div> -->
+    <header class="header-homepage show-on-scroll">
       <div class="hero-image"></div>
       <div class="text-light gradient-half-background">
         <img
@@ -111,6 +110,12 @@
           data-wait="1800"
           data-words='"I&apos;m Joanna &lt;br/ &gt; - a front end developer."'
         ></h1>
+
+        <!-- <h3 class="header-title">&lt;hello world /&gt;</h3>
+        <h1 class="header-title">
+          I'm Joanna - <br />
+          a front end developer.
+        </h1> -->
       </div>
     </header>
 
@@ -196,6 +201,7 @@
         <a href="mailto:asia.jankowska00@gmail.com"
           ><h5>asia.jankowska00@gmail.com</h5>
         </a>
+        <!-- <a href="" class="resume-link">My resume <i class="fas fa-file"></i></a> -->
         <div class="flex">
           <h2>
             <a href="https://github.com/asia-jankowska00/"
@@ -205,12 +211,12 @@
               ><i class="fab fa-linkedin"></i
             ></a>
           </h2>
-          <h6 class="text-thin">
+          <h6 class="text-thin back-to-top">
             <a href="#" class="white-underline-hover padding-y-extra-small"
               >Back to top <i class="fas fa-arrow-up"></i
             ></a>
           </h6>
-          <h6 class="text-thin">&copy; Joanna Jankowska</h6>
+          <h6 class="text-thin copyright">&copy; Joanna Jankowska</h6>
         </div>
       </div>
       <div class="footer-gradient gradient-half-background"></div>
