--- a/projects/ungdomsringens-musikfestival.html
+++ b/projects/ungdomsringens-musikfestival.html
@@ -132,7 +132,7 @@
       <div class="cases-image">
         <img
           class=""
-          src="../assets/images/projects/ungdomsringens/ungdomsringens-12.png"
+          src="../assets/images/projects/ungdomsringens/ungdomsringens-all-devices.png"
           alt=""
         />
       </div>
@@ -234,7 +234,9 @@
       <div class="footer-wrapper show-on-scroll">
         <h3>&lt; Sounds interesting? /&gt;</h3>
         <h6 class="text-thin">Let's talk about what we can make together:</h6>
-        <h5>asia.jankowska00@gmail.com</h5>
+        <a href="mailto:asia.jankowska00@gmail.com"
+          ><h5>asia.jankowska00@gmail.com</h5>
+        </a>
         <div class="flex">
           <h2>
             <a href="https://github.com/asia-jankowska00/"
