--- a/index.html
+++ b/index.html
@@ -1,225 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta property="og:type" content="website" />
-    <meta property="og:title" content="Portfolio - Joanna Jankowska" />
-    <meta property="og:image" content="assets/images/banner.png" />
-    <meta
-      property="og:url"
-      content="http://des-iis.ucn.dk/mmdi0919/1081578/sem2/tema3/portfolio-version-1-2/index.html"
-    />
-    <meta
-      property="og:description"
-      content="Portfolio of my front end development related work"
-    />
-    <link
-      rel="apple-touch-icon"
-      sizes="180x180"
-      href="assets/images/favicons/apple-touch-icon.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="assets/images/favicons/favicon-32x32.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="16x16"
-      href="assets/images/favicons/favicon-16x16.png"
-    />
-    <link rel="manifest" href="assets/images/favicons/site.webmanifest" />
-    <title>Portfolio - Joanna Jankowska</title>
-    <link rel="stylesheet" href="assets/css/style.css" />
-    <link rel="stylesheet" href="assets/css/small.css" />
-    <link rel="stylesheet" href="assets/css/medium.css" />
-    <link rel="stylesheet" href="assets/css/large.css" />
-    <link rel="stylesheet" href="assets/css/extra-large.css" />
-    <script src="assets/js/script.js" defer></script>
-    <script src="assets/js/typewriter.js" defer></script>
-    <script src="assets/js/animations.js" defer></script>
-    <script
-      src="https://kit.fontawesome.com/24893e2831.js"
-      crossorigin="anonymous"
-    ></script>
-  </head>
-  <body>
-    <header class="header-homepage show-on-scroll">
-      <div class="hero-image"></div>
-      <div class="text-light gradient-half-background">
-        <img
-          class="header-svg"
-          src="assets/images/svg/polygon-header.svg"
-          alt=""
-        />
-
-        <nav class="nav-desktop show-on-scroll">
-          <ul>
-            <li class="white-underline-hover"><a href="index.html">home</a></li>
-            <li class="white-underline-hover">
-              <a href="projects.html">projects</a>
-            </li>
-            <li class="white-underline-hover">
-              <a href="skills.html">skills</a>
-            </li>
-            <li class="white-underline-hover">
-              <a href="values.html">values</a>
-            </li>
-            <li class="white-underline-hover">
-              <a href="story.html">story</a>
-            </li>
-          </ul>
-        </nav>
-
-        <nav class="nav-mobile show-on-scroll pointer-events-none">
-          <h2 class="margin-0">
-            <i
-              class="fas fa-bars pointer-events-initial"
-              id="menuHamburger"
-            ></i>
-          </h2>
-          <ul class="hidden" id="menuUl">
-            <li class="gradient-half-background">
-              <a href="index.html">home</a>
-            </li>
-            <li class="gradient-half-background">
-              <a href="projects.html">projects</a>
-            </li>
-            <li class="gradient-half-background">
-              <a href="skills.html">skills</a>
-            </li>
-            <li class="gradient-half-background">
-              <a href="values.html">values</a>
-            </li>
-            <li class="gradient-half-background">
-              <a href="story.html">story</a>
-            </li>
-          </ul>
-        </nav>
-
-        <h3
-          class="txt-type header-title"
-          data-wait="500"
-          data-words='"&lt; hello world / &gt;"'
-        ></h3>
-        <h1
-          class="txt-type header-title"
-          data-wait="1800"
-          data-words='"I&apos;m Joanna &lt;br/ &gt; - a front end developer."'
-        ></h1>
-
-        <!-- <h3 class="header-title">&lt;hello world /&gt;</h3>
-        <h1 class="header-title">
-          I'm Joanna - <br />
-          a front end developer.
-        </h1> -->
-      </div>
-    </header>
-
-    <section
-      class="padding-x-medium mt-25 padding-y-large blurb show-on-scroll"
-    >
-      <h1 class="text-center">&lt;Front end developer /&gt;</h1>
-      <h4 class="text-center subtitle">
-        "A person who creates user interfaces and websites."
-      </h4>
-      <div class="flex">
-        <img
-          class="blurb-image hide-small hide-medium"
-          src="assets/images/svg/icon-webdev.svg"
-          alt=""
-        />
-        <div class="flex blurb-content">
-          <p class="padding-y-small">
-            That's me! But I do more than just build websites and interfaces –
-            <br />I create elegant, thoughtful
-            <strong>digital experiences</strong>,<br />
-            that <strong>delight</strong> the users and
-            <strong>satisfy</strong> stakeholders' expectations.
-          </p>
-          <div class="flex blurb-links">
-            <a href="skills.html"
-              ><h4 class="gradient-underline-hover padding-y-extra-small">
-                my skills <i class="fas fa-long-arrow-alt-right"></i></h4
-            ></a>
-            <a href="values.html"
-              ><h4 class="gradient-underline-hover padding-y-extra-small">
-                my values <i class="fas fa-long-arrow-alt-right"></i></h4
-            ></a>
-            <a href="story.html"
-              ><h4 class="gradient-underline-hover padding-y-extra-small">
-                my story <i class="fas fa-long-arrow-alt-right"></i></h4
-            ></a>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section
-      class="padding-x-small padding-y-medium mb-25 flex homepage-cases show-on-scroll"
-    >
-      <h1 class="text-center">&lt;Projects /&gt;</h1>
-      <h4 class="subtitle text-center">
-        things I've worked on
-      </h4>
-      <a href="projects.html"
-        ><h4 class="padding-y-extra-small gradient-underline-hover">
-          see all projects <i class="fas fa-long-arrow-alt-right"></i></h4
-      ></a>
-      <div class="flex cases-showcase">
-        <div class="case case-1">
-          <div class="case-hover">
-            <a href="projects/svalegaarden-mest.html"
-              ><h4>View project <i class="fas fa-long-arrow-alt-right"></i></h4
-            ></a>
-          </div>
-        </div>
-        <div class="case case-2">
-          <div class="case-hover">
-            <a href="projects/diabetes-dk.html"
-              ><h4>View project <i class="fas fa-long-arrow-alt-right"></i></h4
-            ></a>
-          </div>
-        </div>
-        <div class="case case-3">
-          <div class="case-hover">
-            <a href="projects/ungdomsringens-musikfestival.html"
-              ><h4>View project <i class="fas fa-long-arrow-alt-right"></i></h4
-            ></a>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <footer class="text-light">
-      <div class="footer-wrapper show-on-scroll">
-        <h3>&lt; Sounds interesting? /&gt;</h3>
-        <h6 class="text-thin">Let's talk about what we can make together:</h6>
-        <a href="mailto:asia.jankowska00@gmail.com"
-          ><h5>asia.jankowska00@gmail.com</h5>
-        </a>
-        <!-- <a href="" class="resume-link">My resume <i class="fas fa-file"></i></a> -->
-        <div class="flex">
-          <h2>
-            <a href="https://github.com/asia-jankowska00/"
-              ><i class="fab fa-github"></i
-            ></a>
-            <a href="https://www.linkedin.com/in/joannajankowska00/"
-              ><i class="fab fa-linkedin"></i
-            ></a>
-          </h2>
-          <h6 class="text-thin back-to-top">
-            <a href="#" class="white-underline-hover padding-y-extra-small"
-              >Back to top <i class="fas fa-arrow-up"></i
-            ></a>
-          </h6>
-          <h6 class="text-thin copyright">&copy; Joanna Jankowska</h6>
-        </div>
-      </div>
-      <div class="footer-gradient gradient-half-background"></div>
-    </footer>
-  </body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Web site created using create-react-app"/><meta property="og:type" content="website"/><meta property="og:title" content="Portfolio - Joanna Jankowska"/><meta property="og:image" content="assets/images/banner.png"/><meta property="og:url" content="http://des-iis.ucn.dk/mmdi0919/1081578/sem2/tema3/portfolio-version-1-2/index.html"/><link rel="apple-touch-icon" sizes="180x180" href="/assets/images/favicons/apple-touch-icon.png"/><link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicons/favicon-32x32.png"/><link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicons/favicon-16x16.png"/><link rel="manifest" href="/manifest.json"/><script src="https://kit.fontawesome.com/24893e2831.js" crossorigin="anonymous"></script><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css"/><title>Portfolio - Joanna Jankowska</title><link href="/static/css/main.8e61413a.chunk.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div><script>!function(e){function t(t){for(var n,l,i=t[0],f=t[1],a=t[2],p=0,s=[];p<i.length;p++)l=i[p],Object.prototype.hasOwnProperty.call(o,l)&&o[l]&&s.push(o[l][0]),o[l]=0;for(n in f)Object.prototype.hasOwnProperty.call(f,n)&&(e[n]=f[n]);for(c&&c(t);s.length;)s.shift()();return u.push.apply(u,a||[]),r()}function r(){for(var e,t=0;t<u.length;t++){for(var r=u[t],n=!0,i=1;i<r.length;i++){var f=r[i];0!==o[f]&&(n=!1)}n&&(u.splice(t--,1),e=l(l.s=r[0]))}return e}var n={},o={1:0},u=[];function l(t){if(n[t])return n[t].exports;var r=n[t]={i:t,l:!1,exports:{}};return e[t].call(r.exports,r,r.exports,l),r.l=!0,r.exports}l.m=e,l.c=n,l.d=function(e,t,r){l.o(e,t)||Object.defineProperty(e,t,{enumerable:!0,get:r})},l.r=function(e){"undefined"!=typeof Symbol&&Symbol.toStringTag&&Object.defineProperty(e,Symbol.toStringTag,{value:"Module"}),Object.defineProperty(e,"__esModule",{value:!0})},l.t=function(e,t){if(1&t&&(e=l(e)),8&t)return e;if(4&t&&"object"==typeof e&&e&&e.__esModule)return e;var r=Object.create(null);if(l.r(r),Object.defineProperty(r,"default",{enumerable:!0,value:e}),2&t&&"string"!=typeof e)for(var n in e)l.d(r,n,function(t){return e[t]}.bind(null,n));return r},l.n=function(e){var t=e&&e.__esModule?function(){return e.default}:function(){return e};return l.d(t,"a",t),t},l.o=function(e,t){return Object.prototype.hasOwnProperty.call(e,t)},l.p="/";var i=this.webpackJsonpclient=this.webpackJsonpclient||[],f=i.push.bind(i);i.push=t,i=i.slice();for(var a=0;a<i.length;a++)t(i[a]);var c=f;r()}([])</script><script src="/static/js/2.e1a8c251.chunk.js"></script><script src="/static/js/main.2cd1755d.chunk.js"></script></body></html>
